--- a/k8s/base/mysql-configmap.yaml
+++ b/k8s/base/mysql-configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-conf
+  labels:
+    app: sample-blog
 data:
   MYSQL_USER: sampleblog
   MYSQL_DATABASE: sampleblog
