--- a/k8s/base/mysql-secret.yaml
+++ b/k8s/base/mysql-secret.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-pass
+  labels:
+    app: sample-blog
 data:
   MYSQL_PASSWORD: c2FtcGxlYmxvZw==
   MYSQL_ROOT_PASSWORD: c2FtcGxlYmxvZw==
