--- a/k8s/base/network-policy.yaml
+++ b/k8s/base/network-policy.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: nginx-network-policy
   namespace: sample-blog
+  labels:
+    app: sample-blog
 spec:
   ingress:
   - from:
