--- a/k8s/base/nginx-deployment.yaml
+++ b/k8s/base/nginx-deployment.yaml
@@ -11,11 +11,11 @@ spec:
   replicas: 1 
   selector:
     matchLabels:
-      app: nginx
+      app: sample-blog
   template:
     metadata:
       labels:
-        app: nginx
+        app: sample-blog
     spec:
       containers:
       - name: nginx
