--- a/k8s/base/django-secret.yaml
+++ b/k8s/base/django-secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: django-mysql-pass
   labels:
     app: sample-blog
+    tier: django
 data:
   MYSQL_PASSWORD: c2FtcGxlYmxvZw==
   MYSQL_ROOT_PASSWORD: c2FtcGxlYmxvZw==
