--- a/k8s/base/django-service.yaml
+++ b/k8s/base/django-service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: django
   labels:
     app: sample-blog
+    tier: django
 spec:
   type: ClusterIP
   selector:
-    app: django
+    tier: django
   ports:
   - protocol: TCP
     port: 8000
