--- a/k8s/base/mysql-secret.yaml
+++ b/k8s/base/mysql-secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: mysql-pass
   labels:
     app: sample-blog
+    tier: mysql
 data:
   MYSQL_PASSWORD: c2FtcGxlYmxvZw==
   MYSQL_ROOT_PASSWORD: c2FtcGxlYmxvZw==
