--- a/k8s/base/mysql-statefulset.yaml
+++ b/k8s/base/mysql-statefulset.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       labels:
         app: sample-blog
+        tier: mysql
     spec:
       containers:
       - name: mysql
