--- a/k8s/base/nginx-service.yaml
+++ b/k8s/base/nginx-service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: nginx
   labels:
     app: sample-blog
+    tier: nginx
 spec:
   type: ClusterIP
   selector:
-    app: nginx
+    tier: nginx
   ports:
   - protocol: TCP
     port: 80
