--- a/k8s/base/redis-service.yaml
+++ b/k8s/base/redis-service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: redis
   labels:
     app: sample-blog
+    tier: redis
 spec:
   type: ClusterIP
   selector:
-    app: redis
+    tier: redis
   ports:
   - protocol: TCP
     port: 6379 
