--- a/k8s/base/nginx-route.yaml
+++ b/k8s/base/nginx-route.yaml
@@ -13,3 +13,6 @@ spec:
     name: nginx
     weight: 100
   wildcardPolicy: None
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
